# isucon-sutra

./: .editorconfig  .gitignore  .perltidyrc  NOTE.md  README.md  Takfile.yml  Taskfile.yml
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: bench.yml  create-ami-base.yml  create-ami.yml  frontend.yml  go.yaml  go.yml  image.yml  node.yml  perl.yml  php.yml  python.yml  ruby.yml  rust.yml
bench/: .gitignore  .ko.yml  Dockerfile  NOTE.md  Taskfile.yaml  entrypoint.sh  go.mod  go.sum  main.go
bench/benchrun/: NOTE.md  buf.gen.yaml  (+7 more)
browsercheck/: config.js  package-lock.json  package.json  run.js  utils.js
development/: .env  .gitignore  compose-go.yml  compose-local.yml  compose-node.yml  compose-perl.yml  compose-pho.yml  compose-php.ci.yml  compose-php.yml  compose-python.yml  compose-ruby.yml  compose-rust.yml  docker-compose-go.yml
docs/: .textlintrc.json  ISURIDE.md  NOTE.md  manual.md  package.json  pnpm-lock.yaml  prh-rule.yaml
frontend/: .eslintrc.cjs  .gitignore  .prettierignore  Makefile  NOTE.md  README.md  api-url.mjs  chair-simulator.mjs  create-initial-owner-data.mjs  initial-data.json  initial-owner-data.json  openapi-codegen.config.ts  package-lock.json  package.json  pnpm-lock.yaml  prettierrc.js  tailwind.config.ts  vite.config.ts
openapi/: openapi.yaml  openapi.yml
provisioning/: README.md
webapp/: openapi.yaml
webapp/python/: .pre-commit-config.yaml  NOTE.md  README.md  mypy.ini  noxfile.py  pyproject.toml  ruff.toml
webapp/python/app/: app_handlers.py  chair_handlers.py  internal_handlers.py  main.py  middlewares.py  models.py  owner_handlers.py  utils.py
webapp/python/src/app/: app_handlers.py  payment_gateway.py
webapp/python/src/isuride/: __init__.py  app.py
webapp/python/src/isuride/app/: main.py  middlewares.py  models.py  payment_gateway.py  sql.py  utils.py
webapp/python/src/isuride/app/routers/: apps.py  chairs.py  owners.py
(+554 files in other folders)
