[project]
name = "isuride"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=43.0.3",
    "fastapi>=0.115.5",
    "gunicorn>=23.0.0",
    "pymysql>=1.1.1",
    "python-ulid>=3.0.0",
    "sqlalchemy>=2.0.36",
    "urllib3>=2.2.3",
    "uvicorn-worker>=0.2.0",
]

# TODDO: 本番前に削除
[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.5",
    "icecream>=2.1.3",
    "nox>=2024.10.9",
]

[tool.ruff.lint]
extend-select = [
    "UP", # pyupgrade
    "I", # isort
    "FAST", # FastAPI
]

[tool.mypy]
strict = true
